Update pages: add images, enhance content structure
- Added Am Kelavia operation pages with images
- Updated navigation and HTML semantics
- Enhanced accessibility and content organization

--- a/artifacts.html
+++ b/artifacts.html
@@ -30,6 +30,10 @@
         <li>מפקדות וכוחות פרוקסי איראניים באזור</li>
     </ul>
 
+    
+    <img src="./images/fordo.jpg" alt="מתקן פורדו" width="500" height="333">
+
+
     <h3>נזקים שנגרמו בישראל:</h3>
     <ul>
         <li>פגיעות ממתקפות טילים איראניות נגדיות</li>
