--- a/origins.html
+++ b/origins.html
@@ -25,30 +25,33 @@
                 alt="מטוסים במכת הפתיחה של המלחמה" , width="500" height="333" />
             <figcaption>מטוסי חיל האוויר בדרכם לתקיפה באיראן – מכת הפתיחה של מבצע "עם כלביא"</figcaption>
         </figure>
-        
-            <h2>סיבות עיקריות לפרוץ מבצע "עם כלביא" (13–24 ביוני 2025)</h2>
 
-            <ul>
-                <li><strong>תוכנית הגרעין האיראנית</strong>: התקדמות משמעותית בהעשרת אורניום לרמה של 60% (2021) וכמות
-                    מספיקה לשש עד עשר פצצות גרעיניות (פברואר 2025), נתפסה כאיום קיומי על ישראל.</li>
+        <h2>סיבות עיקריות לפרוץ מבצע "עם כלביא" (13–24 ביוני 2025)</h2>
 
-                <li><strong>התעצמות הבליסטית</strong>: איראן פיתחה טילים בליסטיים ארוכי טווח, המסוגלים לפגוע בישראל,
-                    כחלק מטבעת האש סביב ישראל.</li>
+        <ul>
+            <li><strong>תוכנית הגרעין האיראנית</strong>: התקדמות משמעותית בהעשרת אורניום לרמה של 60% (2021) וכמות
+                מספיקה לשש עד עשר פצצות גרעיניות (פברואר 2025), נתפסה כאיום קיומי על ישראל.</li>
 
-                <li><strong>טבעת האש האיראנית</strong>: תמיכת איראן בחזבאללה, חות'ים ומיליציות שיעיות בסוריה ובעיראק,
-                    שתקפו את ישראל במלחמת חרבות ברזל.</li>
+            <li><strong>התעצמות הבליסטית</strong>: איראן פיתחה טילים בליסטיים ארוכי טווח, המסוגלים לפגוע בישראל,
+                כחלק מטבעת האש סביב ישראל.</li>
 
-                <li><strong>מתקפות ישירות קודמות</strong>: התנקשויות ישראליות (כמו זו של מוחמד רזא זאהדי באפריל 2024)
-                    ומתקפות איראניות על ישראל (אפריל ואוקטובר 2024) הגבירו את המתיחות.</li>
+            <li><strong>טבעת האש האיראנית</strong>: תמיכת איראן בחזבאללה, חות'ים ומיליציות שיעיות בסוריה ובעיראק,
+                שתקפו את ישראל במלחמת חרבות ברזל.</li>
 
-                <li><strong>כשל דיפלומטי</strong>: פרישת ארה"ב מהסכם הגרעין (2018) והאצת תוכנית הגרעין האיראנית לאחר
-                    מכן, לצד כישלון משא ומתן ב-2025, דחפו לפעולה צבאית.</li>
+            <li><strong>מתקפות ישירות קודמות</strong>: התנקשויות ישראליות (כמו זו של מוחמד רזא זאהדי באפריל 2024)
+                ומתקפות איראניות על ישראל (אפריל ואוקטובר 2024) הגבירו את המתיחות.</li>
 
-                <li><strong>מודיעין על התקדמות גרעינית</strong>: דיווחים על אישור אפשרי של ח'אמנאי להאצת תוכנית הנשק
-                    הגרעיני (פברואר 2025) והפרת התחייבויות לפיקוח של סבא"א.</li>
-            </ul>
-        </main>
-    </body>
+            <li><strong>כשל דיפלומטי</strong>: פרישת ארה"ב מהסכם הגרעין (2018) והאצת תוכנית הגרעין האיראנית לאחר
+                מכן, לצד כישלון משא ומתן ב-2025, דחפו לפעולה צבאית.</li>
 
+            <li><strong>מודיעין על התקדמות גרעינית</strong>: דיווחים על אישור אפשרי של ח'אמנאי להאצת תוכנית הנשק
+                הגרעיני (פברואר 2025) והפרת התחייבויות לפיקוח של סבא"א.</li>
+        </ul>
+    </main>
+</body>
+
+<footer>
+    <p> נוצר לצורך למידה בלבד </p>
+</footer>
 
 </html>
