--- a/figures.html
+++ b/figures.html
@@ -18,7 +18,7 @@
         <a href="artifacts.html">מה נשאר מאחור</a>
         <a href="legacy.html">הזיכרון וההשפעה</a>
     </nav>
-    <main>
+  
         <!-- <figure> -->
 <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/bqr-yhcCAcY" 
@@ -35,7 +35,7 @@
 </iframe>
 
         
-
+<main>
     <h2>דמויות מרכזיות במבצע עם כלביא</h2>
     <ul>
         <li>בנימין נתניהו - ראש ממשלת ישראל, אישר את תקיפות האוויר נגד מתקני הגרעין ומאגרי הטילים של איראן והוביל את המדיניות במלחמה.</li>
@@ -46,8 +46,23 @@
         <li>דונלד טראמפ - נשיא ארצות הברית, הכריז על תמיכה בתקיפות אמריקאיות נגד מתקני גרעין איראניים.</li>
         <li>יואב גלנט - שר הביטחון של ישראל, היה מעורב בתכנון וביצוע המבצע כחלק מהקבינט הביטחוני.</li>
     </ul>
+</main>
+<figure>
+    <img src="./images/B2.jpg" alt="תיאור התמונה לנגישות">
+    <figcaption>B2 הנשק האמריקאי ששינה את התמונה...</figcaption>
+</figure>
+
+<figure>
+    <img src="./images/B22.jpg" alt="תיאור התמונה לנגישות">
+    <figcaption>B2 הנשק האמריקאי..</figcaption>
+</figure>
 </body>
 
+
+<footer>
+    <p> נוצר לצורך למידה בלבד </p>
+    <p>מוגש על פי המידע בויקיפדיה: <a href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90">מבצע עם כלביא</a></p>   
+</footer>
 
 
 </html>
