Implement intra-page navigation and top anchor link

--- a/artifacts.html
+++ b/artifacts.html
@@ -6,10 +6,11 @@
     <title>מה נשאר מאחור - מבצע עם כלביא</title>
 </head>
 
+<header id="top">
+    <h1>מה נשאר מאחור - מבצע עם כלביא</h1>
+</header>
+
 <body>
-    <header>
-        <h1>מה נשאר מאחור - מבצע עם כלביא</h1>
-    </header>
 
     <nav>
         <a href="origins.html">ההתחלה</a>
@@ -30,7 +31,7 @@
         <li>מפקדות וכוחות פרוקסי איראניים באזור</li>
     </ul>
 
-    
+
     <img src="./images/fordo.jpg" alt="מתקן פורדו" width="500" height="333">
 
 
@@ -56,13 +57,25 @@
     <h2>סיכום</h2>
     <p>המבצע עם כלביא לא רק ששפך אור על ההתמודדות הצבאית בזמן מלחמה, אלא גם שימר זיכרונות חשובים שיכולים לעזור לדורות
         הבאים ללמוד וללמוד מהאירועים שהתרחשו.</p>
-
-    <footer>
-        <p>מוגש על פי המידע בויקיפדיה: <a
-                href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90"
-                target="_blank">הערך בויקיפדיה</a></p>
-    </footer>
+    <a href="#top">
+        <button>חזור לראש הדף ⬆️</button>
+    </a>
 
 </body>
+
+
+<footer>
+    <p>מוגש על פי המידע בויקיפדיה: <a
+            href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90"
+            target="_blank">הערך בויקיפדיה</a></p>
+    <hr>
+    <a href="figures.html">
+        <button>← לעמוד הקודם</button>
+    </a>
+    <a href="legacy.html">
+        <button>לעמוד הבא →</button>
+    </a>
+</footer>
+
 
 </html>
