--- a/figures.html
+++ b/figures.html
@@ -18,51 +18,54 @@
         <a href="artifacts.html">מה נשאר מאחור</a>
         <a href="legacy.html">הזיכרון וההשפעה</a>
     </nav>
-  
-        <!-- <figure> -->
-<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/bqr-yhcCAcY" 
-        frameborder="0" 
-        allowfullscreen>
-    הדפדפן שלך לא תומך בהטמעת סרטונים
-</iframe>
 
-<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/Q2JHVbC9ahk" 
-        frameborder="0" 
-        allowfullscreen>
-    הדפדפן שלך לא תומך בהטמעת סרטונים
-</iframe>
+    <!-- <figure> -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bqr-yhcCAcY" frameborder="0" allowfullscreen>
+        הדפדפן שלך לא תומך בהטמעת סרטונים
+    </iframe>
 
-        
-<main>
-    <h2>דמויות מרכזיות במבצע עם כלביא</h2>
-    <ul>
-        <li>בנימין נתניהו - ראש ממשלת ישראל, אישר את תקיפות האוויר נגד מתקני הגרעין ומאגרי הטילים של איראן והוביל את המדיניות במלחמה.</li>
-        <li>חוסיין סלאמי - מפקד משמרות המהפכה האסלאמית האיראנית, חוסל בשלב הראשון של המבצע.</li>
-        <li>מוחמד באקרי - ראש המטה הכללי של הכוחות המזוינים של איראן, חוסל בשלב הראשון של המבצע.</li>
-        <li>עלי ח'אמנאי - המנהיג העליון של איראן, דמות מפתח בהחלטות האסטרטגיות של איראן.</li>
-        <li>חוסיין אמיר עבדאללהיאן - שר החוץ של איראן, מעורב במגעים דיפלומטיים במהלך המלחמה.</li>
-        <li>דונלד טראמפ - נשיא ארצות הברית, הכריז על תמיכה בתקיפות אמריקאיות נגד מתקני גרעין איראניים.</li>
-        <li>יואב גלנט - שר הביטחון של ישראל, היה מעורב בתכנון וביצוע המבצע כחלק מהקבינט הביטחוני.</li>
-    </ul>
-</main>
-<figure>
-    <img src="./images/B2.jpg" alt="תיאור התמונה לנגישות">
-    <figcaption>B2 הנשק האמריקאי ששינה את התמונה...</figcaption>
-</figure>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Q2JHVbC9ahk" frameborder="0" allowfullscreen>
+        הדפדפן שלך לא תומך בהטמעת סרטונים
+    </iframe>
 
-<figure>
-    <img src="./images/B22.jpg" alt="תיאור התמונה לנגישות">
-    <figcaption>B2 הנשק האמריקאי..</figcaption>
-</figure>
+
+    <main>
+        <h2>דמויות מרכזיות במבצע עם כלביא</h2>
+        <ul>
+            <li>בנימין נתניהו - ראש ממשלת ישראל, אישר את תקיפות האוויר נגד מתקני הגרעין ומאגרי הטילים של איראן והוביל את
+                המדיניות במלחמה.</li>
+            <li>חוסיין סלאמי - מפקד משמרות המהפכה האסלאמית האיראנית, חוסל בשלב הראשון של המבצע.</li>
+            <li>מוחמד באקרי - ראש המטה הכללי של הכוחות המזוינים של איראן, חוסל בשלב הראשון של המבצע.</li>
+            <li>עלי ח'אמנאי - המנהיג העליון של איראן, דמות מפתח בהחלטות האסטרטגיות של איראן.</li>
+            <li>חוסיין אמיר עבדאללהיאן - שר החוץ של איראן, מעורב במגעים דיפלומטיים במהלך המלחמה.</li>
+            <li>דונלד טראמפ - נשיא ארצות הברית, הכריז על תמיכה בתקיפות אמריקאיות נגד מתקני גרעין איראניים.</li>
+            <li>יואב גלנט - שר הביטחון של ישראל, היה מעורב בתכנון וביצוע המבצע כחלק מהקבינט הביטחוני.</li>
+        </ul>
+    </main>
+    <figure>
+        <img src="./images/B2.jpg" alt="תיאור התמונה לנגישות">
+        <figcaption>B2 הנשק האמריקאי ששינה את התמונה...</figcaption>
+    </figure>
+
+    <figure>
+        <img src="./images/B22.jpg" alt="תיאור התמונה לנגישות">
+        <figcaption>B2 הנשק האמריקאי..</figcaption>
+    </figure>
 </body>
 
 
 <footer>
     <p> נוצר לצורך למידה בלבד </p>
-    <p>מוגש על פי המידע בויקיפדיה: <a href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90">מבצע עם כלביא</a></p>   
+    <p>מוגש על פי המידע בויקיפדיה: <a
+            href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90">מבצע
+            עם כלביא</a></p>
+    <hr>
+    <a href="origins.html">
+        <button>← לעמוד הקודם</button>
+    </a>
+    <a href="artifacts.html">
+        <button>לעמוד הבא →</button>
+    </a>
 </footer>
-
 
 </html>
