--- a/legacy.html
+++ b/legacy.html
@@ -114,6 +114,11 @@
 
 <footer>
     <p> נוצר לצורך למידה בלבד </p>
+    <hr>
+  <a href="artifacts.html">
+    <button>← לעמוד הקודם</button>
+  </a>
+
 </footer>
 
 </html>
