--- a/origins.html
+++ b/origins.html
@@ -48,10 +48,30 @@
                 הגרעיני (פברואר 2025) והפרת התחייבויות לפיקוח של סבא"א.</li>
         </ul>
     </main>
+
+     <section>
+    <h3>רקע נוסף</h3>
+    <details>
+      <summary>לחץ כדי לקרוא עוד על המצב הגיאו־פוליטי לפני המבצע</summary>
+      <p>
+        בחודשים שלפני המבצע התרבו הדיווחים על איחוד בין תאי טרור ממומנים בידי איראן, ועל כוונה לתקוף יעדים ישראליים מחוץ לגבולות המדינה...
+      </p>
+    </details>
+  </section>
 </body>
 
-<footer>
-    <p> נוצר לצורך למידה בלבד </p>
+ <section id="map">
+    <h2>אזור הפעולה המרכזי</h2>
+    <iframe src="https://maps.google.com/maps?q=Tehran&t=&z=7&ie=UTF8&iwloc=&output=embed" width="400" height="300"></iframe>
+  </section>
+
+ 
+  <footer>
+    <p>נוצר לצורך למידה בלבד- כל הזכויות שמורות © חייל מגמת פולסטאק קודקוד, תשפ"ה</p>
+<hr>
+  <a href="figures.html">
+    <button>לעמוד הבא →</button>
+  </a>
 </footer>
 
 </html>
