--- a/figures.html
+++ b/figures.html
@@ -63,7 +63,7 @@
     <a href="origins.html">
         <button>← לעמוד הקודם</button>
     </a>
-    <a href="artifacts.html">
+    <a href="index.html">
         <button>לעמוד הבא →</button>
     </a>
 </footer>
