--- a/artifacts.html
+++ b/artifacts.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav>
-        <a href="origins.html">ההתחלה</a>
+        <a href="index.html">ההתחלה</a>
         <a href="figures.html">הדמויות המרכזיות</a>
         <a href="artifacts.html">מה נשאר מאחור</a>
         <a href="legacy.html">הזיכרון וההשפעה</a>
