--- a/figures.html
+++ b/figures.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="origins.html">ההתחלה</a>
+        <a href="index.html">ההתחלה</a>
         <a href="figures.html">הדמויות המרכזיות</a>
         <a href="artifacts.html">מה נשאר מאחור</a>
         <a href="legacy.html">הזיכרון וההשפעה</a>
@@ -39,7 +39,7 @@
             <li>עלי ח'אמנאי - המנהיג העליון של איראן, דמות מפתח בהחלטות האסטרטגיות של איראן.</li>
             <li>חוסיין אמיר עבדאללהיאן - שר החוץ של איראן, מעורב במגעים דיפלומטיים במהלך המלחמה.</li>
             <li>דונלד טראמפ - נשיא ארצות הברית, הכריז על תמיכה בתקיפות אמריקאיות נגד מתקני גרעין איראניים.</li>
-            <li>יואב גלנט - שר הביטחון של ישראל, היה מעורב בתכנון וביצוע המבצע כחלק מהקבינט הביטחוני.</li>
+            <li>ישראל כ"ץ - שר הביטחון של ישראל, היה מעורב בתכנון וביצוע המבצע כחלק מהקבינט הביטחוני.</li>
         </ul>
     </main>
     <figure>
