--- a/figures.html
+++ b/figures.html
@@ -60,10 +60,10 @@
             href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90">מבצע
             עם כלביא</a></p>
     <hr>
-    <a href="origins.html">
+    <a href="index.html">
         <button>← לעמוד הקודם</button>
     </a>
-    <a href="index.html">
+    <a href="artifacts.html">
         <button>לעמוד הבא →</button>
     </a>
 </footer>
