--- a/index.html
+++ b/index.html
@@ -49,29 +49,35 @@
         </ul>
     </main>
 
-     <section>
-    <h3>רקע נוסף</h3>
-    <details>
-      <summary>לחץ כדי לקרוא עוד על המצב הגיאו־פוליטי לפני המבצע</summary>
-      <p>
-        בחודשים שלפני המבצע התרבו הדיווחים על איחוד בין תאי טרור ממומנים בידי איראן, ועל כוונה לתקוף יעדים ישראליים מחוץ לגבולות המדינה...
-      </p>
-    </details>
-  </section>
+    <section>
+        <h3>רקע נוסף</h3>
+        <details>
+            <summary>לחץ כדי לקרוא עוד על המצב הגיאו־פוליטי לפני המבצע</summary>
+            <p>
+                בחודשים שלפני המבצע התרבו הדיווחים על איחוד בין תאי טרור ממומנים בידי איראן, ועל כוונה לתקוף יעדים
+                ישראליים מחוץ לגבולות המדינה...
+            </p>
+        </details>
+    </section>
 </body>
 
- <section id="map">
+<section id="map">
     <h2>אזור הפעולה המרכזי</h2>
-    <iframe src="https://maps.google.com/maps?q=Tehran&t=&z=7&ie=UTF8&iwloc=&output=embed" width="400" height="300"></iframe>
-  </section>
+    <iframe src="https://maps.google.com/maps?q=Tehran&t=&z=7&ie=UTF8&iwloc=&output=embed" width="400"
+        height="300"></iframe>
+</section>
 
- 
-  <footer>
+
+<footer>
+    <p>מוגש על פי המידע בויקיפדיה: <a
+            href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90"
+            target="_blank">הערך בויקיפדיה</a></p>
+    <br>
     <p>נוצר לצורך למידה בלבד- כל הזכויות שמורות © חייל מגמת פולסטאק קודקוד, תשפ"ה</p>
-<hr>
-  <a href="figures.html">
-    <button>לעמוד הבא →</button>
-  </a>
+    <hr>
+    <a href="figures.html">
+        <button>לעמוד הבא →</button>
+    </a>
 </footer>
 
 </html>
