--- a/legacy.html
+++ b/legacy.html
@@ -114,6 +114,9 @@
 
 <footer>
     <p> נוצר לצורך למידה בלבד </p>
+     <p>מוגש על פי המידע בויקיפדיה: <a
+            href="https://he.wikipedia.org/wiki/%D7%9E%D7%91%D7%A6%D7%A2_%D7%A2%D7%9D_%D7%9B%D7%9C%D7%91%D7%99%D7%90"
+            target="_blank">הערך בויקיפדיה</a></p>
     <hr>
   <a href="artifacts.html">
     <button>← לעמוד הקודם</button>
