Added samlil Am-Kelavia

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <a href="legacy.html">הזיכרון וההשפעה</a>
     </nav>
     <main>
+         <figure>
+            <img src="./images/Semel_Am_Kelavi.svg.png"
+                alt="סמליל מבצע עָם כְּלָבִיא" , width="500" height="333" />
+            <figcaption>מטוסי חיל האוויר בדרכם לתקיפה באיראן – מכת הפתיחה של מבצע "עם כלביא"</figcaption>
+        </figure>
         <figure>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Israeli_Air_Force_fighter_jets_on_their_way_to_attack_Iran%2C_June_2025._II.jpg/500px-Israeli_Air_Force_fighter_jets_on_their_way_to_attack_Iran%2C_June_2025._II.jpg"
                 alt="מטוסים במכת הפתיחה של המלחמה" , width="500" height="333" />
